WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139131
Fix class was previously declared as a struct warnings
https://bugs.webkit.org/show_bug.cgi?id=139131
Summary
Fix class was previously declared as a struct warnings
Éva Balázsfalvi
Reported
2014-12-01 08:20:09 PST
warnings: ../../Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp:56:1: warning: 'TextureMapperGLData' defined as a struct here but previously declared as a class [-Wmismatched-tags] struct TextureMapperGLData { ^ ../../Source/WebCore/platform/graphics/texmap/TextureMapperGL.h:34:1: note: did you mean struct here? class TextureMapperGLData; ^~~~~ struct 1 warning generated. ../../Source/WebKit2/UIProcess/CoordinatedGraphics/CoordinatedLayerTreeHostProxy.h:32:1: warning: class 'CoordinatedGraphicsState' was previously declared as a struct [-Wmismatched-tags] class CoordinatedGraphicsState; ^ ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsState.h:175:8: note: previous use is here struct CoordinatedGraphicsState { ^ ../../Source/WebKit2/UIProcess/CoordinatedGraphics/CoordinatedLayerTreeHostProxy.h:32:1: note: did you mean struct here? class CoordinatedGraphicsState; ^~~~~ struct 1 warning generated. ../../Source/WebKit2/UIProcess/CoordinatedGraphics/WebViewClient.h:39:1: warning: class 'ViewportAttributes' was previously declared as a struct [-Wmismatched-tags] class ViewportAttributes; ^ ../../Source/WebCore/dom/ViewportArguments.h:45:8: note: previous use is here struct ViewportAttributes { ^ ../../Source/WebKit2/UIProcess/CoordinatedGraphics/WebViewClient.h:39:1: note: did you mean struct here? class ViewportAttributes; ^~~~~ struct 1 warning generated. --- TextureMapperGLData, CoordinatedGraphicsState and ViewportAttributes are structs, the noticed forward declarations incorrect, we should use struct instead of class.
Attachments
Patch
(3.01 KB, patch)
2014-12-01 08:25 PST
,
Éva Balázsfalvi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Éva Balázsfalvi
Comment 1
2014-12-01 08:25:14 PST
Created
attachment 242313
[details]
Patch
WebKit Commit Bot
Comment 2
2014-12-02 04:54:34 PST
Comment on
attachment 242313
[details]
Patch Clearing flags on attachment: 242313 Committed
r176632
: <
http://trac.webkit.org/changeset/176632
>
WebKit Commit Bot
Comment 3
2014-12-02 04:54:36 PST
All reviewed patches have been landed. Closing bug.
Carlos Alberto Lopez Perez
Comment 4
2014-12-02 05:24:48 PST
(In reply to
comment #2
)
> Comment on
attachment 242313
[details]
> Patch > > Clearing flags on attachment: 242313 > > Committed
r176632
: <
http://trac.webkit.org/changeset/176632
>
This made the ChangeLog files executables :\ diff --git a/Source/WebCore/ChangeLog b/Source/WebCore/ChangeLog old mode 100644 new mode 100755 diff --git a/Source/WebKit2/ChangeLog b/Source/WebKit2/ChangeLog old mode 100644 new mode 100755
Csaba Osztrogonác
Comment 5
2014-12-02 05:27:23 PST
(In reply to
comment #4
)
> (In reply to
comment #2
) > > Comment on
attachment 242313
[details]
> > Patch > > > > Clearing flags on attachment: 242313 > > > > Committed
r176632
: <
http://trac.webkit.org/changeset/176632
> > > > This made the ChangeLog files executables :\ > > > diff --git a/Source/WebCore/ChangeLog b/Source/WebCore/ChangeLog > old mode 100644 > new mode 100755 > > > diff --git a/Source/WebKit2/ChangeLog b/Source/WebKit2/ChangeLog > old mode 100644 > new mode 100755
OMG :-/ Style checker should have warn about it. :( Thanks for noticing it, let us fix it quickly.
Csaba Osztrogonác
Comment 6
2014-12-02 05:34:13 PST
Fixed by
https://trac.webkit.org/changeset/176633
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug