Fix class was previously declared as a struct warnings https://bugs.webkit.org/show_bug.cgi?id=139131

Reviewed by Csaba Osztrogonác.

Source/WebCore:

No new tests needed.

* platform/graphics/texmap/TextureMapperGL.h:

Source/WebKit2:

* UIProcess/CoordinatedGraphics/CoordinatedLayerTreeHostProxy.h:
* UIProcess/CoordinatedGraphics/WebViewClient.h:


Canonical link: https://commits.webkit.org/157010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176632 268f45cc-cd09-0410-ab3c-d52691b4dbfc